# umlizer

./: .editorconfig  .gitignore  .makim.yaml  .pre-commit-config.yaml  .releaserc.json  404.html  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  index.html  index.md  objects.inv  pyproject.toml  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: main.yaml  release.yaml
api/: references.rst
api/references/: index.html
changelog/: index.html
conda/: dev.yaml
contributing/: contributing.md  index.html
docs/: Makefile  changelog.md  conf.py  contributing.md  example.ipynb  index.md  index.rst  installation.md  installation.rst  make.bat  mkdocs.yaml  usage.rst
docs/api/: references.md  references.rst
docs/uml/: class_graph
example/: example.ipynb  index.html
installation/: index.html
pyuml/: class_graph.py  pyuml.py
search/: search_index.json
src/pyuml/: __init__.py  __main__.py  class_graph.py  cli.py
src/umlizer/: __init__.py  __main__.py  class_graph.py  cli.py  inspector.py  utils.py
src/umlizer/plugins/: __init__.py  django.py
tests/: test_pyuml.py
tests/ecommerce/: offering.py  order.py  product.py  user.py
tests/notebooks/: Idea.ipynb  class_a.py  class_b.py  class_base.py  test.ipynb  test_pyuml.py
uml/: class_graph
